# src/infrastructure/database/repositories/tag/tag.mapper.ts
@@ -1,16 +1,17 @@
-import { TagRaw } from '../../../../contexts/tag'
+import { Task } from '../../../../contexts/task/domains/types'
 
-export function toTagRaw(tag: TagRaw): any {
+export function toTagRaw(tag) {
   return {
     id: tag.id,
     title: tag.title,
-    tasks: tag.tasks.map(task => {
+    tasks: tag.tasks.map((task: Task) => {
       return {
         id: task.id,
         title: task.title,
         description: task.description,
         status: task.status,
-        priority: task.priority
+        priority: task.priority,
+        tags: []
       }
     })
   }
